Improved message for missing CAPSimage headers
If the CAPSimage library was found but the headers were missing,
we erroneously reported that library was too old. Multiple users
ran into this, so it's worth checking as a special case!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,10 +142,10 @@ if (FTDI_LIBRARY AND FTDI_INCLUDE_DIR)
 endif ()
 
 find_library(CAPSIMAGE_LIBRARY NAMES CAPSimage capsimage CAPSimg PATHS extern ENV LD_LIBRARY_PATH)
-if (CAPSIMAGE_LIBRARY)
+find_path(CAPSIMAGE_INCLUDE_DIR caps/CapsLibAll.h PATHS extern)
+if (CAPSIMAGE_LIBRARY AND CAPSIMAGE_INCLUDE_DIR)
   message(STATUS "Found CAPSimage: ${CAPSIMAGE_LIBRARY}")
 
-  find_path(CAPSIMAGE_INCLUDE_DIR caps/CapsLibAll.h PATHS extern)
   set(CMAKE_REQUIRED_LIBRARIES ${CAPSIMAGE_LIBRARY})
   check_function_exists(CAPSSetRevolution HAVE_CAPSSETREVOLUTION)
 
@@ -160,6 +160,8 @@ if (CAPSIMAGE_LIBRARY)
   else ()
     message(STATUS "CAPSimage is too old, version 5.1 or later required!")
   endif ()
+elseif (CAPSIMAGE_LIBRARY)
+  message(WARNING "CAPSimage library found but header files are missing!\nPlease ensure caps/CapsLibAll.h is in your include path.")
 else ()
   message(STATUS "CAPSimage not found")
 endif ()
