Added WOZ disk image reading
Supports bitstream splice position and fully-aligned tracks in
5.25" images, plus all tracks in 3.5" images. Any stored metadata
is shown in the info command output.

Due to our limited GCR support we only recognise the content of
some sample images. That will improve as more GCR formats are added.

--- a/SAMdisk.vcxproj.filters
+++ b/SAMdisk.vcxproj.filters
@@ -357,6 +357,9 @@
     <ClCompile Include="src\BitstreamTrackBuilder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\types\woz.cpp">
+      <Filter>types</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\JupiterAce.h">
