--- a/SAMdisk.vcxproj
+++ b/SAMdisk.vcxproj
@@ -187,6 +187,7 @@
     <ClCompile Include="src\types\trinload.cpp" />
     <ClCompile Include="src\types\udi.cpp" />
     <ClCompile Include="src\types\unsupp.cpp" />
+    <ClCompile Include="src\types\woz.cpp" />
     <ClCompile Include="src\unzip.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
