Added support for PDI disk images
These are RLE-compressed DOS disk images (720K and 1.44M).

The original file format document (PDITYPE1.TXT) couldn't be found,
so format details were taken from the existing PDI2IMA utility.

Also fixed a bug in one of the MemFile::read overloads, which was
failing to advance the iterator for the returned data.

--- a/SAMdisk.vcxproj
+++ b/SAMdisk.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="src\types\mgt.cpp" />
     <ClCompile Include="src\types\msa.cpp" />
     <ClCompile Include="src\types\opd.cpp" />
+    <ClCompile Include="src\types\pdi.cpp" />
     <ClCompile Include="src\types\qdos.cpp" />
     <ClCompile Include="src\types\raw.cpp" />
     <ClCompile Include="src\types\record.cpp" />
