CMake builds script improvements
- added missing project() directive.
- changed config.h to be generated in output directory.
- changed targets to use project name variable.
- changed to create SAMdisk.exe under Windows.
- removed extern sub-directory hack.

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,14 @@
-/CMakeCache.txt
-/CMakeFiles/
+.*
+!.gitignore
+!.travis.yml
+Thumbs.db
+/build
+/out
 /CMakeSettings.json
-/Makefile
-/cmake_install.cmake
-/samdisk.dir
-/include/config.h
-/.vs
-/extern/*
-!/extern/dir.txt
-.DS_Store
-*.o
-*.aps
-*.opt
-*.ncb
-*.plg
-*.suo
+/make_release.bat
 /*.vcproj.*.user
 /*.vcxproj.user
-/*.sdf
-/*.opensdf
-/*.opendb
-/*.VC.db
-/ipch/
 /[Dd]ebug/
 /[Rr]elease/
 /Release (XP)/
 /x64
-/samdisk
-/Test
-/samdisk-*-osx.zip
-/samdisk-*-linux-*.zip
-/make_release.bat
