--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,22 @@
 cmake_minimum_required(VERSION 3.3)
+project(samdisk)
+set(PROJECT_TITLE SAMdisk)
+
+if (CMAKE_TOOLCHAIN_FILE)
+  message(STATUS "Using toolchain file: ${CMAKE_TOOLCHAIN_FILE}")
+  include(${CMAKE_TOOLCHAIN_FILE})
+endif()
 
 file(GLOB CXXSRC src/*.cpp src/types/*.cpp)
 file(GLOB CSRC src/*.c)
-add_executable(samdisk ${CXXSRC} ${CSRC})
-install(TARGETS samdisk DESTINATION bin)
 
-target_include_directories(samdisk PRIVATE include src extern)
+add_executable(${PROJECT_NAME} ${CXXSRC} ${CSRC})
+install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
-target_compile_definitions(samdisk PRIVATE RESOURCE_DIR="${CMAKE_INSTALL_PREFIX}/share/samdisk/")
-target_compile_definitions(samdisk PRIVATE _FILE_OFFSET_BITS=64)
+target_include_directories(${PROJECT_NAME} PRIVATE include src)
+
+target_compile_definitions(${PROJECT_NAME} PRIVATE RESOURCE_DIR="${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}/")
+target_compile_definitions(${PROJECT_NAME} PRIVATE _FILE_OFFSET_BITS=64)
 
 include(CheckIncludeFiles)
 include(CheckFunctionExists)
@@ -18,37 +26,37 @@ include(CheckCXXCompilerFlag)
 
 if (DEFINED CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE} CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
-else ()
+else()
   set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
-endif ()
+endif()
 message(STATUS "CMAKE_BUILD_TYPE is: ${CMAKE_BUILD_TYPE}")
 if (CMAKE_BUILD_TYPE MATCHES Debug)
-  target_compile_definitions(samdisk _DEBUG=1)
-endif ()
+  target_compile_definitions(${PROJECT_NAME} PRIVATE _DEBUG=1)
+endif()
 
-set_property(TARGET samdisk PROPERTY CXX_STANDARD 14)
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
 
 CHECK_CXX_COMPILER_FLAG("-Weffc++" COMPILER_SUPPORTS_EFFCXX)
 if (COMPILER_SUPPORTS_EFFCXX)
-  target_compile_options(samdisk PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-Weffc++>)
-endif ()
+  target_compile_options(${PROJECT_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-Weffc++>)
+endif()
 
 if (CMAKE_BUILD_TOOL MATCHES "make")
-  target_compile_options(samdisk PRIVATE -Wall -Wshadow -pedantic)
+  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wshadow -pedantic)
 elseif (CMAKE_BUILD_TOOL MATCHES "(msdev|devenv|nmake)")
-  target_compile_options(samdisk PRIVATE /W4)
-endif ()
+  target_compile_options(${PROJECT_NAME} PRIVATE /W4)
+endif()
 
 CHECK_CXX_COMPILER_FLAG("-Wsuggest-override" COMPILER_SUPPORTS_WSUGGEST)
 if (COMPILER_SUPPORTS_WSUGGEST)
-  target_compile_options(samdisk PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-Wsuggest-override>)
-endif ()
+  target_compile_options(${PROJECT_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-Wsuggest-override>)
+endif()
 
 CHECK_CXX_COMPILER_FLAG("-stdlib=libc++" COMPILER_SUPPORTS_LIBCXX)
 CHECK_CXX_COMPILER_FLAG("-stdlib=libstdc++" COMPILER_SUPPORTS_LIBSTDCXX)
 if (COMPILER_SUPPORTS_LIBSTDCXX AND NOT APPLE)
-  target_compile_options(samdisk PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-stdlib=libstdc++>)
-endif ()
+  target_compile_options(${PROJECT_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-stdlib=libstdc++>)
+endif()
 
 check_type_size(ssize_t SSIZE_T)
 
@@ -82,67 +90,67 @@ check_function_exists(sysconf HAVE_SYSCONF)
 
 set(CMAKE_THREAD_PREFER_PTHREAD pthread)
 find_package(Threads REQUIRED)
-target_link_libraries(samdisk ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
 
 find_package(ZLIB)
 if (ZLIB_FOUND)
-  target_compile_definitions(samdisk PRIVATE HAVE_ZLIB=1)
-  target_include_directories(samdisk PRIVATE ${ZLIB_INCLUDE_DIR})
-  target_link_libraries(samdisk ${ZLIB_LIBRARY})
-endif ()
+  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_ZLIB=1)
+  target_include_directories(${PROJECT_NAME} PRIVATE ${ZLIB_INCLUDE_DIR})
+  target_link_libraries(${PROJECT_NAME} ${ZLIB_LIBRARY})
+endif()
 
 find_package(BZip2)
 if (BZIP2_FOUND)
-  target_compile_definitions(samdisk PRIVATE HAVE_BZIP2=1)
-  target_include_directories(samdisk PRIVATE ${BZIP2_INCLUDE_DIR})
-  target_link_libraries(samdisk ${BZIP2_LIBRARIES})
-endif ()
+  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_BZIP2=1)
+  target_include_directories(${PROJECT_NAME} PRIVATE ${BZIP2_INCLUDE_DIR})
+  target_link_libraries(${PROJECT_NAME} ${BZIP2_LIBRARIES})
+endif()
 
 find_package(LibLZMA)
 if (LIBLZMA_FOUND)
-  target_compile_definitions(samdisk PRIVATE HAVE_LZMA=1)
-  target_include_directories(samdisk PRIVATE ${LIBLZMA_INCLUDE_DIRS})
-  target_link_libraries(samdisk ${LIBLZMA_LIBRARIES})
-endif ()
+  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_LZMA=1)
+  target_include_directories(${PROJECT_NAME} PRIVATE ${LIBLZMA_INCLUDE_DIRS})
+  target_link_libraries(${PROJECT_NAME} ${LIBLZMA_LIBRARIES})
+endif()
 
 find_library(WINUSB_LIBRARY NAMES winusb)
 find_path(WINUSB_INCLUDE_DIR NAMES winusb.h)
 if (WINUSB_LIBRARY AND WINUSB_INCLUDE_DIR)
   message(STATUS "Found WinUSB: ${LIBUSB1_LIBRARY}")
-  target_compile_definitions(samdisk PRIVATE HAVE_WINUSB=1)
-  target_include_directories(samdisk PRIVATE ${WINUSB_INCLUDE_DIR})
-  target_link_libraries(samdisk ${WINUSB_LIBRARY})
-endif ()
+  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_WINUSB=1)
+  target_include_directories(${PROJECT_NAME} PRIVATE ${WINUSB_INCLUDE_DIR})
+  target_link_libraries(${PROJECT_NAME} ${WINUSB_LIBRARY})
+endif()
 
 find_library(LIBUSB1_LIBRARY NAMES usb-1.0 ENV LD_LIBRARY_PATH)
 find_path(LIBUSB1_INCLUDE_DIR NAMES libusb.h PATH_SUFFIXES libusb-1.0)
 if (LIBUSB1_LIBRARY AND LIBUSB1_INCLUDE_DIR)
   message(STATUS "Found libusb-1.0: ${LIBUSB1_LIBRARY}")
-  target_compile_definitions(samdisk PRIVATE HAVE_LIBUSB1=1)
-  target_include_directories(samdisk PRIVATE ${LIBUSB1_INCLUDE_DIR})
-  target_link_libraries(samdisk ${LIBUSB1_LIBRARY})
-endif ()
+  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_LIBUSB1=1)
+  target_include_directories(${PROJECT_NAME} PRIVATE ${LIBUSB1_INCLUDE_DIR})
+  target_link_libraries(${PROJECT_NAME} ${LIBUSB1_LIBRARY})
+endif()
 
 find_library(FTD2XX_LIBRARY NAMES ftd2xx ENV LD_LIBRARY_PATH)
 find_path(FTD2XX_INCLUDE_DIR ftd2xx.h)
 if (FTD2XX_LIBRARY AND FTD2XX_INCLUDE_DIR)
   message(STATUS "Found FTD2XX: ${FTD2XX_LIBRARY}")
-  target_compile_definitions(samdisk PRIVATE HAVE_FTD2XX=1)
-  target_include_directories(samdisk PRIVATE ${FTD2XX_INCLUDE_DIR})
-  target_link_libraries(samdisk ${FTD2XX_LIBRARY})
-endif ()
+  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_FTD2XX=1)
+  target_include_directories(${PROJECT_NAME} PRIVATE ${FTD2XX_INCLUDE_DIR})
+  target_link_libraries(${PROJECT_NAME} ${FTD2XX_LIBRARY})
+endif()
 
 find_library(FTDI_LIBRARY NAMES ftdi ENV LD_LIBRARY_PATH)
 find_path(FTDI_INCLUDE_DIR ftdi.h)
 if (FTDI_LIBRARY AND FTDI_INCLUDE_DIR)
   message(STATUS "Found FTDI: ${FTDI_LIBRARY}")
-  target_compile_definitions(samdisk PRIVATE HAVE_FTDI=1)
-  target_include_directories(samdisk PRIVATE ${FTDI_INCLUDE_DIR})
-  target_link_libraries(samdisk ${FTDI_LIBRARY})
-endif ()
+  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_FTDI=1)
+  target_include_directories(${PROJECT_NAME} PRIVATE ${FTDI_INCLUDE_DIR})
+  target_link_libraries(${PROJECT_NAME} ${FTDI_LIBRARY})
+endif()
 
-find_library(CAPSIMAGE_LIBRARY NAMES CAPSimage capsimage CAPSimg PATHS extern ENV LD_LIBRARY_PATH)
-find_path(CAPSIMAGE_INCLUDE_DIR caps/CapsLibAll.h PATHS extern)
+find_library(CAPSIMAGE_LIBRARY NAMES capsimage CAPSimage CAPSimg ENV LD_LIBRARY_PATH)
+find_path(CAPSIMAGE_INCLUDE_DIR caps/CapsLibAll.h)
 if (CAPSIMAGE_LIBRARY AND CAPSIMAGE_INCLUDE_DIR)
   message(STATUS "Found CAPSimage: ${CAPSIMAGE_LIBRARY}")
 
@@ -150,35 +158,36 @@ if (CAPSIMAGE_LIBRARY AND CAPSIMAGE_INCLUDE_DIR)
   check_function_exists(CAPSSetRevolution HAVE_CAPSSETREVOLUTION)
 
   if (CAPSIMAGE_INCLUDE_DIR AND HAVE_CAPSSETREVOLUTION)
-    target_compile_definitions(samdisk PRIVATE HAVE_CAPSIMAGE=1)
-    target_include_directories(samdisk PRIVATE ${CAPSIMAGE_INCLUDE_DIR})
+    target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_CAPSIMAGE=1)
+    target_include_directories(${PROJECT_NAME} PRIVATE ${CAPSIMAGE_INCLUDE_DIR})
     if (APPLE)
-      set_target_properties(samdisk PROPERTIES LINK_FLAGS "-F /Library/Frameworks -weak_framework CAPSImage")
-    else ()
-      target_link_libraries(samdisk ${CAPSIMAGE_LIBRARY})
-    endif ()
-  else ()
+      set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-F /Library/Frameworks -weak_framework CAPSImage")
+    else()
+      target_link_libraries(${PROJECT_NAME} ${CAPSIMAGE_LIBRARY})
+    endif()
+  else()
     message(STATUS "CAPSimage is too old, version 5.1 or later required!")
-  endif ()
+  endif()
 elseif (CAPSIMAGE_LIBRARY)
   message(WARNING "CAPSimage library found but header files are missing!\nPlease ensure caps/CapsLibAll.h is in your include path.")
-else ()
+else()
   message(STATUS "CAPSimage not found")
-endif ()
+endif()
 
 find_library(WINUSB_LIBRARY NAMES winusb)
 if (WINUSB_LIBRARY)
-  target_link_libraries(samdisk ${WINUSB_LIBRARY})
-endif ()
+  target_link_libraries(${PROJECT_NAME} ${WINUSB_LIBRARY})
+endif()
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/include/config.h)
-target_compile_definitions(samdisk PRIVATE HAVE_CONFIG_H=1)
-
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
+target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_CONFIG_H=1)
 
 if (WIN32)
-  target_compile_definitions(samdisk PRIVATE _WIN32=1)
-  target_link_libraries(samdisk setupapi ws2_32)
-endif ()
+  set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_TITLE})
+  target_compile_definitions(${PROJECT_NAME} PRIVATE _WIN32=1)
+  target_link_libraries(${PROJECT_NAME} setupapi ws2_32)
+endif()
 
 if (APPLE)
   set(CMAKE_OSX_DEPLOYMENT_TARGET 10.9)
@@ -186,5 +195,5 @@ if (APPLE)
   find_library(DA_FRAMEWORK DiskArbitration)
   find_library(CF_FRAMEWORK CoreFoundation)
   find_library(IOKIT_FRAMEWORK IOKit)
-  target_link_libraries(samdisk ${DA_FRAMEWORK} ${CF_FRAMEWORK} ${IOKIT_FRAMEWORK})
-endif ()
+  target_link_libraries(${PROJECT_NAME} ${DA_FRAMEWORK} ${CF_FRAMEWORK} ${IOKIT_FRAMEWORK})
+endif()
