--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ indent_size = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[CMakeList.txt]
+[{CMakeList.txt,*.cmake,.travis.yml}]
 indent_style = space
 indent_size = 2
 
