Moved Windows to use the CMake build system
- removed bundled Visual Studio project files.
- changed to use config.h for detected libraries.
- removed duplicate winusb and unnecessary fdrawcmd.h detection.
- updated requirements details and added MIT badge to ReadMe.md.

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ indent_size = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{CMakeList.txt,launch.vs.json,*.cmake,.travis.yml}]
+[{CMakeList.txt,launch.vs.json,*.cmake,*.yml}]
 indent_size = 2
 
 [*.md]
