--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,6 @@ check_include_files(linux/fs.h HAVE_LINUX_FS_H)
 check_include_files(scsi/scsi.h HAVE_SCSI_SCSI_H)
 check_include_files(scsi/sg.h HAVE_SCSI_SG_H)
 check_include_files(DiskArbitration/DiskArbitration.h HAVE_DISKARBITRATION_DISKARBITRATION_H)
-check_include_files(fdrawcmd.h HAVE_FDRAWCMD_H)
 
 check_function_exists(snprintf HAVE_SNPRINTF)
 check_function_exists(strcasecmp HAVE_STRCASECMP)
@@ -94,59 +93,59 @@ target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
 
 find_package(ZLIB)
 if (ZLIB_FOUND)
-  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_ZLIB=1)
   target_include_directories(${PROJECT_NAME} PRIVATE ${ZLIB_INCLUDE_DIR})
   target_link_libraries(${PROJECT_NAME} ${ZLIB_LIBRARY})
+  set(HAVE_ZLIB 1)
 endif()
 
 find_package(BZip2)
 if (BZIP2_FOUND)
-  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_BZIP2=1)
   target_include_directories(${PROJECT_NAME} PRIVATE ${BZIP2_INCLUDE_DIR})
   target_link_libraries(${PROJECT_NAME} ${BZIP2_LIBRARIES})
+  set(HAVE_BZIP2 1)
 endif()
 
 find_package(LibLZMA)
 if (LIBLZMA_FOUND)
-  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_LZMA=1)
   target_include_directories(${PROJECT_NAME} PRIVATE ${LIBLZMA_INCLUDE_DIRS})
   target_link_libraries(${PROJECT_NAME} ${LIBLZMA_LIBRARIES})
+  set(HAVE_LZMA 1)
 endif()
 
 find_library(WINUSB_LIBRARY NAMES winusb)
 find_path(WINUSB_INCLUDE_DIR NAMES winusb.h)
 if (WINUSB_LIBRARY AND WINUSB_INCLUDE_DIR)
   message(STATUS "Found WinUSB: ${LIBUSB1_LIBRARY}")
-  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_WINUSB=1)
   target_include_directories(${PROJECT_NAME} PRIVATE ${WINUSB_INCLUDE_DIR})
   target_link_libraries(${PROJECT_NAME} ${WINUSB_LIBRARY})
+  set(HAVE_WINUSB 1)
 endif()
 
 find_library(LIBUSB1_LIBRARY NAMES usb-1.0 ENV LD_LIBRARY_PATH)
 find_path(LIBUSB1_INCLUDE_DIR NAMES libusb.h PATH_SUFFIXES libusb-1.0)
 if (LIBUSB1_LIBRARY AND LIBUSB1_INCLUDE_DIR)
   message(STATUS "Found libusb-1.0: ${LIBUSB1_LIBRARY}")
-  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_LIBUSB1=1)
   target_include_directories(${PROJECT_NAME} PRIVATE ${LIBUSB1_INCLUDE_DIR})
   target_link_libraries(${PROJECT_NAME} ${LIBUSB1_LIBRARY})
+  set(HAVE_LIBUSB1 1)
 endif()
 
 find_library(FTD2XX_LIBRARY NAMES ftd2xx ENV LD_LIBRARY_PATH)
 find_path(FTD2XX_INCLUDE_DIR ftd2xx.h)
 if (FTD2XX_LIBRARY AND FTD2XX_INCLUDE_DIR)
   message(STATUS "Found FTD2XX: ${FTD2XX_LIBRARY}")
-  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_FTD2XX=1)
   target_include_directories(${PROJECT_NAME} PRIVATE ${FTD2XX_INCLUDE_DIR})
   target_link_libraries(${PROJECT_NAME} ${FTD2XX_LIBRARY})
+  set(HAVE_FTD2XX 1)
 endif()
 
 find_library(FTDI_LIBRARY NAMES ftdi ENV LD_LIBRARY_PATH)
 find_path(FTDI_INCLUDE_DIR ftdi.h)
 if (FTDI_LIBRARY AND FTDI_INCLUDE_DIR)
   message(STATUS "Found FTDI: ${FTDI_LIBRARY}")
-  target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_FTDI=1)
   target_include_directories(${PROJECT_NAME} PRIVATE ${FTDI_INCLUDE_DIR})
   target_link_libraries(${PROJECT_NAME} ${FTDI_LIBRARY})
+  set(HAVE_FTDI 1)
 endif()
 
 find_library(CAPSIMAGE_LIBRARY NAMES capsimage CAPSimage CAPSimg ENV LD_LIBRARY_PATH)
@@ -158,13 +157,13 @@ if (CAPSIMAGE_LIBRARY AND CAPSIMAGE_INCLUDE_DIR)
   check_function_exists(CAPSSetRevolution HAVE_CAPSSETREVOLUTION)
 
   if (CAPSIMAGE_INCLUDE_DIR AND HAVE_CAPSSETREVOLUTION)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_CAPSIMAGE=1)
     target_include_directories(${PROJECT_NAME} PRIVATE ${CAPSIMAGE_INCLUDE_DIR})
     if (APPLE)
       set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-F /Library/Frameworks -weak_framework CAPSImage")
     else()
       target_link_libraries(${PROJECT_NAME} ${CAPSIMAGE_LIBRARY})
     endif()
+    set(HAVE_CAPSIMAGE 1)
   else()
     message(STATUS "CAPSimage is too old, version 5.1 or later required!")
   endif()
@@ -172,11 +171,6 @@ elseif (CAPSIMAGE_LIBRARY)
   message(WARNING "CAPSimage library found but header files are missing!\nPlease ensure caps/CapsLibAll.h is in your include path.")
 else()
   message(STATUS "CAPSimage not found")
-endif()
-
-find_library(WINUSB_LIBRARY NAMES winusb)
-if (WINUSB_LIBRARY)
-  target_link_libraries(${PROJECT_NAME} ${WINUSB_LIBRARY})
 endif()
 
 if (WIN32)
@@ -196,4 +190,3 @@ endif()
 
 configure_file(config.h.in config.h)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
-target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_CONFIG_H=1)
