Added AppVeyor CI builds for Windows
Builds x86 and x64 targets using Visual Studio 2017, plus another x86
build without any vcpkg dependencies.

The ReadMe.md on the project page shows the master branch status.

--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,9 @@
 !.gitignore
 !.gitattributes
 !.travis.yml
+!.appveyor.yml
 Thumbs.db
 /build
 /out
 /CMakeSettings.json
 /make_release.bat
-/*.vcproj.*.user
-/*.vcxproj.user
-/[Dd]ebug/
-/[Rr]elease/
-/Release (XP)/
-/x64
