Fixed potential Win32 delay-load link error
Some configurations don't automatically include delayimp.lib during
linking, resulting in:

error: LNK2001: unresolved external symbol __delayLoadHelper2

Adding it manually should fix those cases.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,7 +119,7 @@ endif()
 find_library(WINUSB_LIBRARY NAMES winusb ENV LD_LIBRARY_PATH)
 if (WINUSB_LIBRARY)
   message(STATUS "Found winusb: ${WINUSB_LIBRARY}")
-  target_link_libraries(${PROJECT_NAME} ${WINUSB_LIBRARY})
+  target_link_libraries(${PROJECT_NAME} ${WINUSB_LIBRARY} delayimp.lib)
   set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/DELAYLOAD:winusb.dll")
   set(HAVE_WINUSB 1)
 endif()
