--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,13 @@ addons:
 
 matrix:
   include:
-    # Default macOS (currently Xcode 9.4.1 on macOS 10.13)
-    - os: osx
-
-    # Newer macOS (Xcode 11.2.1 on macOS 10.14)
+    # macOS 10.14 and Xcode 11.2.1
     - os: osx
       osx_image: xcode11.2
+
+    # macOS 10.15.5 and Xcode 12.0
+    - os: osx
+      osx_image: xcode12
 
     # Ubuntu LTS, gcc, x64
     - os: linux
