--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ matrix:
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-      HOMEBREW_NO_AUTO_UPDATE=1 brew install libftdi;
+      brew install libftdi;
     fi
 
 before_script:
