--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,27 @@ branches:
 
 language: cpp
 
+env:
+  - HOMEBREW_NO_AUTO_UPDATE=1
+
 addons:
   apt:
     packages:
     - libusb-1.0-0-dev
     - libftdi-dev
+  homebrew:
+    packages:
+    - libftdi
 
 matrix:
   include:
-    # macOS 10.14 and Xcode 11.2.1
+    # macOS 10.15.7 and Xcode 12.2
     - os: osx
-      osx_image: xcode11.2
+      osx_image: xcode12.2
 
-    # macOS 10.15.5 and Xcode 12.0
+    # macOS 12.4 and Xcode 13.4.1
     - os: osx
-      osx_image: xcode12
+      osx_image: xcode13.4
 
     # Ubuntu LTS, gcc, x64
     - os: linux
@@ -29,11 +35,6 @@ matrix:
     - os: linux
       dist: bionic
       compiler: clang
-
-before_install:
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-      brew install libftdi;
-    fi
 
 before_script:
   - cmake --version
